--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/stack": "^7.0.6",
     "expo": "^52.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "^2.21.2",
-    "react-native-reanimated": "^3.16.2",
+    "react-native-reanimated": "^3.16.5",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0"
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
+    "@faker-js/faker": "^9.3.0",
     "@react-native-community/cli": "15.0.1",
     "@react-native-community/cli-platform-android": "15.0.1",
     "@react-native-community/cli-platform-ios": "15.0.1",
